--- a/Rock Paper Scissors Game/style.css
+++ b/Rock Paper Scissors Game/style.css
@@ -65,6 +65,7 @@ h2 {
   width: 100%;
   height: 100%;
   justify-content: space-between;
+  align-items: center;
 }
 .simple-text {
   text-align: center;
@@ -168,24 +169,40 @@ span {
   opacity: 0;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 350px) {
   .main {
-    width: 370px;
+    width: 350px;
+    height: 98vh;
+    border: gray solid 4px;
+    
+    
+  }
+  .js-stat{
+    justify-content: space-around;
   }
   .img-quality {
     width: 130px;
   }
   .status {
-    width: 300px;
+    width: 280px;
+    margin:  0;
+    margin-top: 12px;
+    
   }
-  .player-stats,
-  .computer-stats {
-    margin-right: 20px;
-  }
-
+  
+.main-btn{
+  padding: 6px 2px;
+  margin:0 2px;
+}
+.two-buttons{
+  display: flex;
+  flex-direction: column;
+}
   .js-del-btn,
   .js-auto-play {
-    padding: 6px 8px;
+    padding: 6px 2px;
+    text-align: center;
+    margin-top: 4px;
   }
   .child-descriptionTwo {
     font-size: 14px;
